Mon Jun  8 17:20:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/{controller,master,node,processor}, lib/fairy.rb,
	  share/encodinf.rb: [SRS#78] 入力ファイルのエンコーディングができる
	* share/locale.rb: locale関係をくくり出した

Mon Jun  8 14:55:46 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SRS#10] 適切な例外の定義

Wed Jun  3 18:24:54 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: [SR#80] 可動待ちノードの切り離し機能

Wed Jun  3 17:48:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, local-file-output.rb: [SR#99]
	  local-file-outputでまとめ送りする
	* bhere.rb, here.rb: [SR#98] hereでまとめ送りする
	* n-local-file-output.rb: 行分割がちゃんとできていなかった.
	* fairy-BODY.templ, bin/fairy-cat: [SR#37] fairy-cat作成

Wed Jun  3 15:24:34 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* local-file-input.rb, n-local-file-input.rb: [SR#82] local-fileで
	  のまとめ送り対応.

Tue Jun  2 17:18:49 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* test/test-map.rb, test/test-minifairy.rb: 追加
	* n-mod-group-by.rb: オブジェクトリーク解消
	* share/hash-1.rb: 1文字目でハッシュするように変更

Thu May 28 19:36:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: mapfちょっと最適化にバグがあった
	* port.rb: Export#push_buf 追加

Wed May 27 17:50:40 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* hash-simple-hash.rb: 増田版SimpleHash追加

Wed May 27 17:32:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: mapfちょっと最適化
	* port.rb: OnMemorySizedPoolQueue, ChankedPoolQeueu追加, PoolQueue
	 ちょっと最適化
	* hash-md5.rb: エラーメッセージ修正

Mon May 25 19:30:00 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* local-file-input.rb: [BUG:96]対応
	* port.rb: SizedPoolQueue#push: Import::SET_NO_IMPORT 対応
	* block-source.rb: シンタックスエラーをクライアントに返す.

Fri May 22 16:48:31 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: PoolQueue#push: Import::SET_NO_IMPORT 対応

Fri May 22 14:38:43 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: PoolQueue#push_all: 追加. Import#push_buf: push_all対応
